--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.app {
+  border: 1px solid black;
+  background-color: white;
+  max-width: 860px;
+  padding: 35px 50px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+#generalInfos {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+#introduction {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.left-side {
+  position: relative;
+  padding-right: 2.7em;
+}
+
+.left-side::after {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 90%;
+  background-color: rgb(89 128 250);
+  right: 2.2em;
+  top: 5%;
+}
+
+.print-button {
+  position: absolute;
+  top: 2em;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  font-size: 25px;
+  border-radius: 50%;
+  padding: 3px;
   text-align: center;
 }
