--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --blue-accent-color: rgb(89 128 250);
 }
 
 #root {
@@ -43,6 +44,7 @@ h2 {
 
 h1, h3, h4, h5, h6 {
   margin: 0;
+  line-height: 1;
 }
 
 h3 {
@@ -52,15 +54,17 @@ h3 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.4em 1.2em;
+  font-size: 0.95em;
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  text-align: center;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: var(--blue-accent-color);
 }
 
 section {
@@ -109,4 +113,17 @@ section {
 
 .detailed-subtitle {
   display: inline-block;
+}
+
+li.blue {
+  list-style: none;
+}
+
+li.blue::before {
+  color: var(--blue-accent-color);
+  content: "\2022";
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
 }
