--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,7 @@
 .app {
   background-color: white;
   max-width: 860px;
-  padding: 35px 50px;
+  padding: 35px 5%;
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
@@ -44,4 +44,29 @@
   border-radius: 50%;
   padding: 3px;
   text-align: center;
+}
+
+@media screen and (max-width: 480px) {
+    .app {
+      max-width: 97vw;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .right-side {
+      order: 0;
+    }    
+
+    .left-side {
+      padding-right: 0;
+      order: 1;
+    }
+      
+    .left-side::after {
+      height: 0;
+    }
+
+    .print-button {
+      right: 0.5%;
+    }
 }
