--- a/src/style/GeneralInfos.css
+++ b/src/style/GeneralInfos.css
@@ -2,9 +2,9 @@
     padding-top: 0;
     display: grid;
     grid-template-columns: repeat(2, auto);
-    grid-row: repeat(2, auto);
     position: relative;
     align-items: center;
+    border-bottom: 2px solid rgb(89 128 250);
 }
 
 #generalInfos h2 {
@@ -18,6 +18,7 @@
     grid-row: 1 / 3;
     grid-column: 2 / 3;
     justify-self: end;
+    padding: 0;
 }
 
 .general-infos--contact-item {
@@ -25,4 +26,18 @@
     font-size: 0.9em;
     width: fit-content;
     margin-left: auto;
+}
+
+@media screen and (max-width: 480px) {
+    #generalInfos {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .general-infos--contact-item  {
+        margin-right: auto;
+        margin-left: 0;
+    }
+    
 }
